flicker fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,14 @@ html {
   transition:all 1s linear;
 }
 
+.picture-title {
+	visibility: hidden;
+}
+
+#jbtn {
+	visibility: hidden;
+}
+
 img {
   max-width: 100%;
 }
@@ -37,6 +45,7 @@ h3 {
 }
 
 .buttonspace {
+	visibility: hidden;
   margin-left: auto;
   margin-right: auto;
   height: 40px;
